--- a/style.css
+++ b/style.css
@@ -28,3 +28,30 @@ body {
     text-shadow: .1rem .1rem .5rem black;
     padding-bottom: 1.6rem;
   }
+
+  /*--- Media Queries --*/
+
+@media (max-width: 767px) {
+    .caption h1 {
+      font-size: 2.3rem;
+      letter-spacing: .1rem;
+      padding-bottom: .5rem;
+    }
+    .caption h4 {
+      font-size: 1.2rem;
+      padding-bottom: 1.2rem;
+    }
+  }
+  
+  @media (max-height: 512px) {
+    .caption h1 {
+      font-size: 2.3rem;
+      letter-spacing: .1rem;
+      padding-bottom: .5rem;
+    }
+    .caption h4 {
+      font-size: 1.2rem;
+      padding-bottom: 1.2rem;
+      top: 20%;
+    }
+  }
