--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-
 body {
   overflow-x; hidden;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Roboto Slab';
   color: white;
   background-color: black;
 }
@@ -16,6 +14,11 @@ a:hover {
 
 p {
   font-size: 1.3rem;
+}
+
+h4 {
+    font-size: 1.3rem;
+    font-weight: 100;
 }
 
 iframe {
@@ -77,13 +80,12 @@ iframe {
 }
 .paragraph-divider p {
     font-size: 1rem;
-    word-wrap: break-word;
 }
 
 /*--- Media Queries --*/
 @media (max-width: 1197px) {
     iframe {
-        width: auto;
+        width: 40vw;
         height: auto;
     }
 }
