--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ iframe {
 /*--- Media Queries --*/
 @media (max-width: 1197px) {
     iframe {
-        width: auto;
+        width: 40vw;
         height: auto;
     }
 }
